--- a/Wikipedia/Localizations/fr.lproj/Localizable.strings
+++ b/Wikipedia/Localizations/fr.lproj/Localizable.strings
@@ -295,7 +295,7 @@
 "description-help-tips-title" = "Conseils pour créer des descriptions";
 "description-help-title" = "Aide à la description de l’article";
 "description-help-wikidata-guide" = "Guide Wikidata pour l'écriture des descriptions";
-"description-published-button-title" = "Terminé";
+"description-published-button-title" = "Fait";
 "description-published-footer" = "Vous pouvez aussi modifier les articles dans cette application. La prochaine fois, essayez de corriger les fautes de frappe et les petites phrases en cliquant sur l’icône du crayon.";
 "description-published-subtitle" = "Vous venez d’améliorer Wikipédia pour chacun";
 "description-published-title" = "Description publiée !";
@@ -387,7 +387,7 @@
 "donate-payment-method-prompt-apple-pay-button-title" = "Donner avec Apple Pay";
 "donate-payment-method-prompt-message" = "Faites un don avec Apple Pay ou choisissez un autre mode de paiement.";
 "donate-payment-method-prompt-other-button-title" = "Autre mode de paiement";
-"donate-payment-method-prompt-title" = "Faire un don via Apple Pay ?";
+"donate-payment-method-prompt-title" = "Faire un don avec Apple Pay ?";
 "donate-success-subtitle" = "Votre générosité nous touche beaucoup.";
 "donate-success-title" = "Merci !";
 "donate-title" = "Sélectionnez le montant";
@@ -1029,11 +1029,11 @@
 "profile-button-badge-accessibility-label" = "Profil avec badge non lu";
 "profile-page-donate-subtext" = "Ou soutenez Wikipédia avec un don pour le garder gratuit et accessible à tous dans le monde.";
 "profile-page-join-subtext" = "Créez un compte Wikipédia pour suivre vos contributions, enregistrer des articles hors ligne et synchroniser sur plusieurs appareils.";
-"profile-page-join-title" = "Se connecter/Rejoindre Wikipédia";
+"profile-page-join-title" = "Rejoignez Wikipédia / Se connecter";
 "profile-page-logged-out-year-in-review-subtext" = "Connectez-vous ou créez un compte pour obtenir un meilleur Bilan de l'Année la prochaine fois";
 "profile-page-title-logged-out" = "Compte";
 "profile-year-in-review-login-subtitle" = "Connectez-vous ou créez un compte pour revoir le Bilan de l'Année et avoir droit à des informations plus personnalisées.";
-"profile-year-in-review-login-title" = "Connectez-vous pour accéder au bilan de l'année";
+"profile-year-in-review-login-title" = "Connectez-vous pour accéder au Bilan de l'Année";
 "project-name-mediawiki" = "MediaWiki";
 "project-name-wikibooks" = "Wikilivres";
 "project-name-wikidata" = "Wikidata";
@@ -1217,7 +1217,7 @@
 "settings-storage-and-syncing-show-default-reading-list-title" = "Afficher la liste de lecture « Enregistrés »";
 "settings-storage-and-syncing-title" = "Stockage des articles et synchronisation";
 "settings-title" = "Paramètres";
-"settings-year-in-review-header" = "La désactivation du bilan de l'année supprimera toutes les informations personnalisées enregistrées et masquera le bilan de l'année.";
+"settings-year-in-review-header" = "La désactivation du Bilan de l'Année effacera toutes les informations personnalisées stockées et masquera le Bilan de l'Année.";
 "share-a-fact-made-with" = "Fait avec l’application Wikipédia";
 "share-article-name-on-wikipedia" = "« $1 » sur Wikipédia :";
 "share-building" = "Création d’une carte « Partager un fait »...";
@@ -1463,17 +1463,17 @@
 "wikitext-upload-save-sign-in" = "Se connecter";
 "wikitext-upload-save-terms-and-licenses-ccsa4" = "En publiant les modifications, vous acceptez les $1Conditions d'utilisation$2 et acceptez irrévocablement de mettre votre contribution sous les licences $3CC BY-SA 3.0$4 et la $5GFDL$6. Vous acceptez qu’un hyperlien ou une URL soit une attribution suffisante pour la licence Creative Commons.";
 "wikitext-upload-save-terms-name" = "Conditions d’utilisation";
-"year-in-review-base-donate-subtitle" = "Grâce à votre soutien, la Fondation Wikimedia continuera de garantir un accès à des informations fiables et sans publicité, tout en maintenant Wikipédia à la pointe technologique. [Soutenez notre mission]($1).";
-"year-in-review-base-donate-title" = "0 publicité sur Wikipédia";
-"year-in-review-base-editors-subtitle" = "La communauté de bénévoles de Wikipédia a réalisé plus de 452 257 modifications via l’application mobile cette année. Le cœur de Wikipédia réside dans sa communauté mondiale de contributeurs volontaires, de donateurs et de lecteurs — tous unis pour partager un accès universel à des informations fiables.";
-"year-in-review-base-editors-title" = "Plus de $1 modifications ont été faites par les contributeurs";
-"year-in-review-base-edits-subtitle" = "Cette année, Wikipédia a été modifié en moyenne $1 fois par minute. Les articles sont créés et améliorés collectivement, en s’appuyant sur des sources vérifiées. [Chacun peut contribuer au savoir collectif]($2).";
+"year-in-review-base-donate-subtitle" = "Grâce à votre aide, la Fondation Wikimédia, l'organisme à but non lucratif à l'origine de Wikipédia, continuera à garantir que les informations sur lesquelles vous comptez sont exemptes de publicité et fiables, tout en permettant à Wikipédia de fonctionner sans problème avec des outils et des technologies de pointe. N'hésitez pas à faire un don dès aujourd'hui. [En savoir plus sur notre travail]($1).";
+"year-in-review-base-donate-title" = "Aucune publicité n'est diffusée sur Wikipédia";
+"year-in-review-base-editors-subtitle" = "Les bénévoles ont apporté 81 987 181 modifications dans plus de 300 versions linguistiques différentes de Wikipédia. Plus de 31,2 millions de modifications ont été apportées à Wikipédia en anglais. Chaque heure de chaque jour, des bénévoles travaillent à l'amélioration de Wikipédia.";
+"year-in-review-base-editors-title" = "Les contributeurs de l'application iOS ont effectué plus de $1 modifications";
+"year-in-review-base-edits-subtitle" = "Cette année, Wikipédia a été modifié à un rythme moyen de $1 fois par minute. Les articles sont créés et améliorés de manière collaborative à l'aide de sources fiables. Nous avons tous des connaissances à partager, [voyez comment participer]($2).";
 "year-in-review-base-edits-title" = "Wikipédia a été modifié $1 fois par minute";
-"year-in-review-base-reading-subtitle" = "Cette année, Wikipédia comptait plus de $1 millions d’articles répartis dans plus de %2 langues actives. Vous avez rejoint des millions de personnes pour enrichir et explorer des savoirs diversifiés.";
-"year-in-review-base-reading-title" = "Wikipédia : disponible en plus de 300 langues";
-"year-in-review-base-saved-subtitle" = "Les utilisateurs actifs de l’application mobile ont créé plus de 31,6 millions de listes de lecture cette année. La possibilité d’ajouter des articles à ces listes permet de les consulter hors connexion. Vous pouvez également synchroniser vos listes entre différents appareils en vous connectant.";
-"year-in-review-base-saved-title" = "Nous avions plus de $1 millions de listes de lecture";
-"year-in-review-base-viewed-subtitle" = "Les utilisateurs de l’application mobile ont consulté des articles Wikipédia $1 milliard de fois. Pour des millions de personnes à travers le monde, Wikipédia est la ressource incontournable pour répondre à une question, rechercher des informations professionnelles ou scolaires, ou découvrir un nouveau fait.";
+"year-in-review-base-reading-subtitle" = "Cette année, Wikipédia a atteint plus de $1 millions d'articles dans plus de $2 langues actives. Vous avez rejoint des millions de personnes qui ont souhaité élargir leurs connaissances et explorer des sujets divers.";
+"year-in-review-base-reading-title" = "Wikipédia était disponible dans plus de 300 langues";
+"year-in-review-base-saved-subtitle" = "Les utilisateurs actifs de l'application iOS comptaient plus de 31,6 millions de listes de lecture cette année. L'ajout d'articles aux listes de lecture vous permet d'accéder aux articles même hors ligne. Vous pouvez également vous connecter pour synchroniser les listes de lecture sur plusieurs appareils.";
+"year-in-review-base-saved-title" = "Il a été utilisé plus de $1 million de listes de lecture";
+"year-in-review-base-viewed-subtitle" = "Les utilisateurs de l'application iOS ont consulté des articles de Wikipédia $1 milliard de fois. Pour les gens du monde entier, Wikipédia est la première étape pour répondre à une question, rechercher des informations pour l'école ou le travail, ou apprendre un fait nouveau.";
 "year-in-review-base-viewed-title" = "Nous avons consulté des articles de Wikipédia $1 milliard de fois";
 "year-in-review-button-title" = "Bilan de l'Année";
 "year-in-review-collective-article-views" = "Une illustration animée d'un écran d'ordinateur avec un navigateur Internet ouvert, naviguant activement dans un article Wikipédia.";
@@ -1483,54 +1483,54 @@
 "year-in-review-collective-languages" = "Une illustration animée d'une pierre gravée d'inscriptions représentant différentes langues, symbolisant la manière dont Wikipédia construit de manière collaborative des connaissances issues de diverses cultures et régions.";
 "year-in-review-collective-saved-articles" = "Un globe puzzle avec le logo de Wikipédia, représentant la collaboration mondiale.";
 "year-in-review-collective-zero-ads" = "Logo Wikimédia";
-"year-in-review-day-friday" = "Les vendredis";
-"year-in-review-day-monday" = "Les lundis";
-"year-in-review-day-saturday" = "Les samedis";
-"year-in-review-day-sunday" = "Les dimanches";
-"year-in-review-day-thursday" = "Les jeudis";
-"year-in-review-day-tuesday" = "Les mardis";
-"year-in-review-day-wednesday" = "Les mercredis";
+"year-in-review-day-friday" = "vendredis";
+"year-in-review-day-monday" = "lundis";
+"year-in-review-day-saturday" = "samedis";
+"year-in-review-day-sunday" = "dimanches";
+"year-in-review-day-thursday" = "jeudis";
+"year-in-review-day-tuesday" = "mardis";
+"year-in-review-day-wednesday" = "mercredis";
 "year-in-review-donate" = "Faire un don";
-"year-in-review-donate-now" = "Contribuer maintenant";
+"year-in-review-donate-now" = "Faites un don dès maintenant";
 "year-in-review-english-edits" = "Un graphique montrant les 10 éditions les plus modifiées de Wikipédia en 2024 : plus de 31 millions de modifications pour l'anglais, 5 508 570 pour l'allemand, 5 276 385 pour le français, 4 786 205 pour l'espagnol, 3 303 066 pour le russe, 3 200 398 pour l'italien, 2 973 657 pour le japonais, 2 505 032 pour le chinois, 1 383 808 pour le polonais et 1 376 980 pour l'ukrainien. Le nombre total de modifications sur l'ensemble des éditions de Wikipédia en 2024 est de 81 987 181.";
-"year-in-review-feature-announcement-body-personalized" = "CDécouvrez les articles consultés, partagez votre exploration et revivez les temps forts de votre année.";
+"year-in-review-feature-announcement-body" = "Consultez des informations sur les articles lus et modifiés, et partagez les moments forts de notre année sur Wikipédia.";
+"year-in-review-feature-announcement-body-personalized" = "Consultez des informations sur les articles que vous lisez sur l'application Wikipédia, partagez votre parcours et découvrez les moments forts de votre année.";
 "year-in-review-feature-announcement-title" = "Explorer le Bilan Wikipédia";
-"year-in-review-feature-announcement-title-personalized" = "Explorez votre bilan de l'année Wikipédia";
-"year-in-review-feature-explore-body" = "Wikipédia est la plus grande ressource de connaissances jamais constituée dans l’histoire de l’humanité, accessible gratuitement à tous, partout. Retour sur l’année 2024 à travers le prisme de Wikipédia.";
-"year-in-review-feature-explore-body-personalized" = "Votre historique de lecture reste confidentiel. Les statistiques sont calculées à partir des données stockées localement sur votre appareil.";
+"year-in-review-feature-announcement-title-personalized" = "Explorez votre Bilan Wikipédia de l'Année";
+"year-in-review-feature-explore-body" = "Wikipédia est la plus grande ressource de connaissances jamais constituée dans l'histoire du monde. Elle est accessible gratuitement à tous, partout dans le monde. Voici un aperçu de l'année 2024 à travers le prisme de Wikipédia.";
+"year-in-review-feature-explore-body-personalized" = "Consultez des informations sur les articles que vous lisez sur l'application Wikipédia et les modifications que vous avez apportées. Votre historique de lecture est protégé. Les informations de lecture sont calculées à l'aide des données stockées localement sur votre appareil.";
 "year-in-review-finish" = "Terminer";
-"year-in-review-login-subtitle" = "Connectez-vous ou créez un compte pour bénéficier d'informations plus personnalisées.";
-"year-in-review-login-title" = "Améliorez votre bilan de l'année";
-"year-in-review-personalized-day-subtitle-format" = "Vous lisez le plus d'articles le $1. Il est clair que le $1 est votre jour de prédilection pour explorer de nouveaux contenus. Merci de profiter au maximum de votre temps de lecture !";
+"year-in-review-login-subtitle" = "Connectez-vous ou créez un compte pour bénéficier d'informations plus personnalisées";
+"year-in-review-login-title" = "Améliorez votre Bilan de l'Année";
+"year-in-review-personalized-day-subtitle-format" = "Vous avez lu le plus d'articles les $1. En d'autres termes, c'est ce jour-là que vous avez privilégié la découverte de nouveaux contenus. Merci de profiter au maximum de votre temps de lecture !";
 "year-in-review-personalized-day-title-format" = "Vous lisez le plus les $1.";
-"year-in-review-personalized-donate-subtitle" = "Merci d’investir dans la diffusion du savoir libre. La Fondation Wikimedia a cette année amélioré ses technologies pour mieux servir lecteurs et contributeurs, développé des outils collaboratifs et étendu Wikipédia à davantage de langues.";
-"year-in-review-personalized-donate-title" = "Votre générosité fait vivre Wikipédia";
+"year-in-review-personalized-donate-subtitle" = "Merci d'investir dans l'avenir du savoir en accès libre. Cette année, la Fondation Wikimédia a fait progresser la technologie pour mieux servir chaque lecteur et bénévole, a développé des outils qui favorisent la collaboration et a soutenu Wikipédia dans davantage de langues. [En savoir plus sur notre travail]($1).";
+"year-in-review-personalized-donate-title" = "Votre générosité a contribué au dynamisme de Wikipédia";
 "year-in-review-personalized-donation-thank-you" = "Logo Wikimédia";
-"year-in-review-personalized-edit-views-subtitle-format" = "Les lecteurs du monde entier apprécient vos contributions. Au cours des deux derniers mois, les articles que vous avez édités ont été consultés xxx fois. Grâce à des rédacteurs comme vous, Wikipédia est une source de connaissances fiable, factuelle et en constante amélioration pour le monde entier.";
-"year-in-review-personalized-edit-views-title-format" = "Vos modifications ont été vues plus de $1 fois récemment";
-"year-in-review-personalized-editing-subtitle-format" = "Vous avez édité Wikipédia {{PLURAL:$1|une|$1}} fois. Merci d'être l'un des rédacteurs bénévoles qui font la différence sur les projets Wikimedia dans le monde entier.";
+"year-in-review-personalized-edit-views-subtitle-format" = "Les lecteurs du monde entier apprécient vos contributions. Au cours des deux derniers mois, les articles que vous avez édités ont été vus au total $1 fois. Grâce à des éditeurs comme vous, Wikipédia est une source de connaissances fiable en s'appuyant sur des faits réels et en constante amélioration pour le monde entier.";
+"year-in-review-personalized-edit-views-title-format" = "Vos modifications ont été consultées récemment plus de $1 fois";
+"year-in-review-personalized-editing-subtitle-format" = "Vous avez modifié Wikipédia {{PLURAL:$1|une|$1}} fois. Merci d'être l'un des contributeurs bénévoles qui font la différence sur les projets Wikimédia du monde entier.";
 "year-in-review-personalized-editing-subtitle-format-500plus" = "Vous avez modifié Wikipédia plus de 500 fois. Merci d'être l'un des contributeurs bénévoles qui font la différence sur les projets Wikimédia à travers le monde.";
-"year-in-review-personalized-editing-title-format" = "Vous avez édité Wikipédia {{PLURAL:$1|une|$1}} fois";
+"year-in-review-personalized-editing-title-format" = "Vous avez modifié Wikipédia {{PLURAL:$1|une|$1}} fois";
 "year-in-review-personalized-editing-title-format-500plus" = "Vous avez modifié Wikipédia plus de 500 fois";
 "year-in-review-personalized-explore" = "Une illustration animée d'une main tenant le globe Wikipédia qui se transforme progressivement en une petite pièce de puzzle, symbolisant les contributions individuelles à la plateforme.";
 "year-in-review-personalized-reading-subtitle-format" = "Cette année, vous avez lu $1 article{{PLURAL:$1||s}}. Wikipédia comptait $2 million{{PLURAL:$2||s}} d'articles disponibles dans plus de $3 langues actives. Vous avez rejoint les millions de personnes qui ont élargi leurs connaissances et exploré des sujets divers.";
-"year-in-review-personalized-reading-title-format" = "Vous avez lu $1 article{{PLURAL:$1||s}} cette année";
+"year-in-review-personalized-reading-title-format" = "Vous avez lu cette année $1 article{{PLURAL:$1||s}}";
 "year-in-review-personalized-saved-articles" = "Illustration d'une pièce de puzzle portant un casque de sécurité avec des écrans d'ordinateur à l'arrière.";
-"year-in-review-personalized-saved-subtitle-format" = "Vous avez sauvegardé $1 articles, dont $2, $3 et $4. Chaque article sauvegardé reflète vos intérêts et vous aide à construire une base de connaissances personnalisée sur Wikipédia.";
-"year-in-review-personalized-saved-title-format" = "Vous avez sauvegardé $1 article{{PLURAL:$1||s}}";
+"year-in-review-personalized-saved-subtitle-format" = "Vous avez enregistré cette année $1 article{{PLURAL:$1|1=, à savoir $2|2=s, à savoir $2 et $3|3=s, à savoir $2, $3 et $4|s, dont $2, $3 et $4}}. Chaque article sauvegardé reflète vos intérêts et contribue à créer une base de connaissances personnalisée sur Wikipédia.";
+"year-in-review-personalized-saved-title-format" = "Vous avez enregistré $1 article{{PLURAL:$1||s}}";
 "year-in-review-personalized-user-edits" = "Une illustration animée montrant des octets s'empilant les uns sur les autres, symbolisant la création continue de connaissances gratuites.";
 "year-in-review-personalized-weekday" = "Une horloge qui tourne, symbolisant le temps passé par les utilisateurs à lire Wikipédia.";
 "year-in-review-personalized-you-read" = "Une pièce de puzzle avec le logo Wikimédia entrant par la gauche.";
 "year-in-review-personalized-your-edits-views" = "Une illustration représentant une pièce de puzzle Wikipédia à côté d'un stylo.";
-"year-in-review-share-text" = "Voici mon bilan de l'année Wikipédia. Créé avec l'application Wikipedia iOS";
-"year-in-review-survey-additional-thoughts" = "Des commentaires complémentaires ?";
+"year-in-review-share-text" = "Voici mon Bilan de l'Année sur Wikipédia. Créé avec l'application iOS Wikipédia";
+"year-in-review-survey-additional-thoughts" = "Des suggestions ?";
 "year-in-review-survey-neutral" = "Neutre";
 "year-in-review-survey-satisfied" = "Satisfait";
-"year-in-review-survey-subtitle" = "Aidez-nous à améliorer votre bilan de l’année. Quel est votre niveau de satisfaction ?";
+"year-in-review-survey-subtitle" = "Aidez-nous à améliorer le Bilan de l'Année de Wikipédia. Êtes-vous satisfait de cette fonctionnalité ? Que souhaiteriez-vous voir l'année prochaine ?";
 "year-in-review-survey-title" = "Enquête de satisfaction";
 "year-in-review-survey-unsatisfied" = "Insatisfait";
 "year-in-review-survey-very-satisfied" = "Très satisfait";
 "year-in-review-survey-very-unsatisfied" = "Très insatisfait";
 "year-in-review-wikipedia-w-accessibility-label" = "Logo w de Wikipédia";
 "year-in-review-wmf-logo-accessibility-label" = "Logo de la Fondation Wikimédia";
-"year-in-review-feature-announcement-body" = "Explorez les perspectives sur les articles consultés et modifiés, et partagez les moments forts de votre année sur Wikipédia.";
