Updates from design

--- a/Wikipedia/Localizations/de.lproj/Localizable.strings
+++ b/Wikipedia/Localizations/de.lproj/Localizable.strings
@@ -1108,7 +1108,7 @@
 "year-in-review-feature-announcement-body-personalized" = "Erfahre mehr über die Artikel, die du in der Wikipedia-App liest, teile deine Reise und entdecke die Highlights deines Jahres.";
 "year-in-review-feature-explore-body-personalized" = "Erfahre, welche Artikel du in der Wikipedia-App gelesen und welche Änderungen du vorgenommen hast. Dein Leseverlauf wird geschützt aufbewahrt. Die Leseeinblicke werden anhand der lokal gespeicherten Daten auf deinem Gerät erstellt.";
 "year-in-review-personalized-reading-title-format" = "Du hast dieses Jahr $1 Artikel gelesen";
-"year-in-review-personalized-reading-subtitle-format" = "Dieses Jahr hast du $1 Artikel gelesen. Auf Wikipedia waren mehr als $2 Millionen Artikel in über $3 Sprachen verfügbar. Du hast dich Millionen von Menschen angeschlossen, die ihr Wissen erweitert und verschiedene Themen ergründet haben.";
+"year-in-review-personalized-reading-subtitle-format" = "Dieses Jahr hast du $1 Artikel gelesen, darunter $2, $3, und $4. Auf Wikipedia waren mehr als 63 Millionen Artikel in über 300 Sprachen verfügbar. Du hast dich Millionen von Menschen angeschlossen, die ihr Wissen erweitert und verschiedene Themen ergründet haben.";
 "year-in-review-personalized-day-subtitle-format" = "Du liest die meisten Artikel am $1. Es ist klar, dass der $1 dein Haupttag ist, um neue Inhalte zu entdecken. Danke, dass du das Beste aus deiner Lesezeit machst!";
 "year-in-review-personalized-saved-title-format" = "Du hast $1 Artikel gespeichert";
 "year-in-review-personalized-saved-subtitle-format" = "Du hast $1 Artikel gespeichert, darunter $2, $3, und $4. Jeder gespeicherte Artikel spiegelt deine Interessen wider und hilft dabei, eine personalisierte Wissensbasis auf Wikipedia aufzubauen.";
