--- a/Wikipedia/Localizations/nl.lproj/Localizable.strings
+++ b/Wikipedia/Localizations/nl.lproj/Localizable.strings
@@ -1483,8 +1483,8 @@
 "year-in-review-personalized-editing-subtitle-format" = "Je hebt Wikipedia $1 keer bewerkt. Bedankt dat je een van de vrijwillige bewerkers bent die een verschil maken op Wikimediaprojecten over de hele wereld.";
 "year-in-review-personalized-editing-subtitle-format-500plus" = "U hebt Wikipedia meer dan 500 keer bewerkt. Bedankt dat u een van de vrijwillige redacteuren bent die het verschil maakt in Wikimedia-projecten over de hele wereld.";
 "year-in-review-personalized-editing-title-format" = "Je hebt Wikipedia $1 keer bewerkt";
-"year-in-review-personalized-editing-title-format-500plus" = "U hebt Wikipedia meer dan 500 keer bewerkt";
-"year-in-review-personalized-reading-subtitle-format" = "Dit jaar heb je $1 artikelen gelezen. Wikipedia had meer dan $2 miljoen artikelen beschikbaar in meer dan $3 actieve talen. Je hebt je aangesloten bij miljoenen mensen die hun kennis uitbreiden en verschillende onderwerpen verkennen.";
+"year-in-review-personalized-editing-title-format-500plus" = "Je hebt Wikipedia 500+ keer bewerkt.";
+"year-in-review-personalized-reading-subtitle-format" = "Dit jaar heb je $1 artikelen gelezen, waaronder $2, $3 en $4. Wikipedia had meer dan 63 miljoen artikelen beschikbaar in meer dan 300 talen. Je hebt je aangesloten bij miljoenen mensen die hun kennis uitbreiden en verschillende onderwerpen verkennen.";
 "year-in-review-personalized-reading-title-format" = "Je hebt dit jaar $1 artikelen gelezen";
 "year-in-review-personalized-saved-subtitle-format" = "Je hebt $1 artikelen opgeslagen, waaronder $2, $3 en $4. Elk opgeslagen artikel weerspiegelt je interesses en helpt bij het opbouwen van een persoonlijke kennisbank op Wikipedia.";
 "year-in-review-personalized-saved-title-format" = "Je hebt $1 artikelen opgeslagen";
