--- a/Wikipedia/Localizations/zh-hans.lproj/Localizable.strings
+++ b/Wikipedia/Localizations/zh-hans.lproj/Localizable.strings
@@ -1508,8 +1508,8 @@
 "year-in-review-personalized-editing-subtitle-format" = "您编辑了维基百科 $1 次。感谢您成为志愿者编辑，并对全世界的维基媒体项目产生影响。";
 "year-in-review-personalized-editing-subtitle-format-500plus" = "您在维基百科上的编辑次数超过了500次。感谢您成为世界各地在维基媒体项目上作出贡献的志愿编者中的一员。";
 "year-in-review-personalized-editing-title-format" = "您编辑了维基百科 $1 次";
-"year-in-review-personalized-editing-title-format-500plus" = "您在维基百科上的编辑次数超过了500次。";
-"year-in-review-personalized-reading-subtitle-format" = "今年，您阅读了 $1 篇文章。维基百科有超过 $2 万篇文章，涵盖 #3 多种活跃语言。您与数百万人一起拓展知识，探索各种主题。";
+"year-in-review-personalized-editing-title-format-500plus" = "您编辑了维基百科 500 多次";
+"year-in-review-personalized-reading-subtitle-format" = "今年，您阅读了 $1 篇文章，包括 $2、$3 和 $4。维基百科有超过 6300 万篇文章，涵盖 300 多种语言。您与数百万人一起拓展知识，探索各种主题。";
 "year-in-review-personalized-reading-title-format" = "您今年阅读了 $1 篇文章";
 "year-in-review-personalized-saved-subtitle-format" = "您保存了 $1 篇文章，包括 $2、$3 和 $4。每一篇保存的文章都反映了您的兴趣，并帮助您在维基百科上建立个性化的知识库。";
 "year-in-review-personalized-saved-title-format" = "您保存了 $1 篇文章";
